# cppskeleton

./: .clang-format  .travis.yml  CMakeLists.txt  Makefile  README.md  hello.cc  hello.h  hello_test.cc
